# finn

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  azure-pipelines.yml  package.json  rustfmt.toml
.ci/: general-jobs  pushdocs.yml  readme.txt  release.yml  test.yml  windows-release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.hooks/: pre-commit
api/: Cargo.toml
api/src/: auth.rs  client.rs  foreign.rs  foreign_rpc.rs  handlers.rs  lib.rs  owner.rs  owner_rpc.rs  rest.rs  router.rs  stratum.rs  stratum_rpc.rs  types.rs  web.rs
api/src/handlers/: blocks_api.rs  chain_api.rs  peers_api.rs  pool_api.rs  server_api.rs  transactions_api.rs  utils.rs  version_api.rs
api/tests/: rest.rs
chain/: Cargo.toml
chain/src/: chain.rs  error.rs  lib.rs  linked_list.rs  pipe.rs  store.rs  txhashset.rs  types.rs
chain/src/txhashset/: bitmap_accumulator.rs  rewindable_kernel_view.rs  txhashset.rs  utxo_view.rs
chain/tests/: bitmap_accumulator.rs  chain_test_helper.rs  data_file_integrity.rs  mine_nrd_kernel.rs  mine_simple_chain.rs  nrd_validation_rules.rs  process_block_cut_through.rs  store_indices.rs  store_kernel_pos_index.rs  test_block_known.rs  test_coinbase_maturity.rs  test_get_kernel_height.rs  test_header_weight_validation.rs  test_txhashset.rs  test_txhashset_archive.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: block_read_v1.rs  block_read_v2.rs  compact_block_read_v1.rs  compact_block_read_v2.rs  transaction_read_v1.rs  transaction_read_v2.rs
core/fuzz/src/: main.rs
core/src/: consensus.rs  core.rs  genesis.rs  global.rs  lib.rs  macros.rs  pow.rs  ser.rs
core/src/core/: block.rs  block_sums.rs  committed.rs  compact_block.rs  hash.rs  id.rs  merkle_proof.rs  pmmr.rs  transaction.rs  verifier_cache.rs
core/src/core/pmmr/: backend.rs  pmmr.rs  readonly_pmmr.rs  rewindable_pmmr.rs  vec_backend.rs
core/src/libtx/: aggsig.rs  build.rs  error.rs  mod.rs  proof.rs  reward.rs  secp_ser.rs
core/src/pow/: common.rs  cuckaroo.rs  cuckarood.rs  cuckaroom.rs  cuckarooz.rs  error.rs  siphash.rs  types.rs
core/src/stratum/: connections.rs  mod.rs
core/tests/: block.rs  common.rs  consensus_automated.rs  consensus_mainnet.rs  core.rs  merkle_proof.rs  pmmr.rs  transaction.rs  vec_backend.rs  verifier_cache.rs
doc/: atomic_swap_marketplace.md  build.md  code_structure.md  coinbase_maturity.md  contract_ideas.md  contracts.md  data_dump.md  distributed_messaging.md  exchange_recommendations.md  fast-sync.md  intro.md  merkle.md  mmr.md  mwc-wallet_coinjoin.md  mwc4bitcoiners.md  mwc4bitcoiners_KR.md  mwc4bitcoiners_ZH-CN.md  mwc_floonet.md  mwc_mining_guide.md  offline_wallet.md  outbound_tor_for_full_node.md  pruning.md  rangeproof_byte_format.md  release_instruction.md  replay_attack_mitigation.md  roadmap.md  state.md  stratum.md  stratum_for_pools.md  switch_commitment.md  table_of_contents.md  toc.md  tor_inbound_feature.md  tor_inbound_testing.md  troubleshooting_wallet  web-wallet.md
doc/api/: api.md
doc/chain/: blocks_and_headers.md  blocks_and_headers_KR.md  chain_sync.md  chain_sync_KR.md
doc/dandelion/: dandelion.md  dandelion_KR.md
doc/developer/: mining_starter.md
doc/internal/: pool.md
doc/mining/: Install_mac.md  install_linux.md  install_windows.md
doc/p2p/: p2p_protocol.md
doc/pow/: pow.md  pow_KR.md
doc/translations/: build_ES.md  build_JP.md  build_KR.md  build_ZH-CN.md  code_structure_ZH-CN.md  coinbase_maturity_KR.md  coinbase_maturity_ZH-CN.md  contracts_ZH-CN.md  fast-sync_ES.md  fast-sync_KR.md  fast-sync_ZH-CN.md  intro_DE.md  intro_ES.md  intro_JP.md  intro_KR.md  intro_NL.md  intro_PT-BR.md  intro_RU.md  intro_SE.md  intro_ZH-CN.md  merkle_KR.md  merkle_ZH-CN.md  mmr_KR.md  mmr_ZH-CN.md  pruning_KR.md  pruning_ZH-CN.md  state_JP.md  state_KR.md  state_ZH-CN.md  stratum_KR.md  stratum_ZH-CN.md  switch_commitment_ZH-CN.md  table_of_contents_KR.md  table_of_contents_ZH-CN.md
etc/: Dockerfile  crate-release.sh  shell.nix
etc/gen_gen/: README.md  _Cargo.toml
keychain/: Cargo.toml
keychain/src/: base58.rs  extkey_bip32.rs  keychain.rs  lib.rs  mnemonic.rs  types.rs  view_key.rs
p2p/: Cargo.toml
p2p/fuzz/: Cargo.toml
p2p/fuzz/fuzz_targets/: read_ban_reason.rs  read_get_peer_addrs.rs  read_hand.rs  read_headers.rs  read_locator.rs  read_msg_header.rs  read_peer_addr.rs  read_peer_addrs.rs  read_peer_error.rs  read_ping.rs  read_pong.rs  read_shake.rs  read_tx_hashset_archive.rs  read_tx_hashset_request.rs
p2p/src/: conn.rs  handshake.rs  lib.rs  libp2p_connection.rs  msg.rs  peer.rs  peers.rs  protocol.rs  serv.rs  store.rs  types.rs
p2p/tests/: peer_addr.rs  peer_handshake.rs  ser_deser.rs
pool/: Cargo.toml
pool/fuzz/: Cargo.toml
pool/fuzz/fuzz_targets/: common.rs  transaction_pool.rs
pool/src/: lib.rs  pool.rs  transaction_pool.rs  types.rs
pool/tests/: block_building.rs  block_max_weight.rs  block_reconciliation.rs  coinbase_maturity.rs  common.rs  nrd_kernel_relative_height.rs  nrd_kernels_disabled.rs  nrd_kernels_enabled.rs  transaction_pool.rs
servers/: Cargo.toml
servers/src/: common.rs  error.rs  grin.rs  lib.rs  mining.rs
servers/src/common/: adapters.rs  hooks.rs  stats.rs  types.rs
servers/src/finn/: dandelion_monitor.rs  seed.rs  server.rs  sync.rs
servers/src/finn/sync/: body_sync.rs  header_sync.rs  state_sync.rs  syncer.rs
servers/src/mining/: mine_block.rs  stratum_data.rs  stratumserver.rs  test_miner.rs
servers/src/tor/: config.rs  mod.rs  process.rs
store/: Cargo.toml
store/src/: leaf_set.rs  lib.rs  lmdb.rs  pmmr.rs  prune_list.rs  types.rs
store/tests/: lmdb.rs  pmmr.rs  prune_list.rs  test_bitmap.rs  utxo_set_perf.rs
tests/src/Database/: CMakeLists.txt
util/: Cargo.toml
util/src/: file.rs  hex.rs  lib.rs  logger.rs  macros.rs  ov3.rs  rate_counter.rs  secp_static.rs  types.rs  zip.rs
util/tests/: file.rs  zip.rs
