[package]
name = "finn"
version = "4.4.0"
authors = ["finn Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/Finn-node"
keywords = [ "crypto", "Finn", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.Finn", "**/*.Finn", "**/*.finn", "**/*.finn"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool"]
exclude = ["etc/gen_gen"]

[[bin]]
name = "Finn"
path = "src/bin/finn.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.11"
clap = { version = "2.33", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
humansize = "1.1.0"
serde = "1"
serde_json = "1"
log = "0.4"
term = "0.6"
failure = "0.1"
failure_derive = "0.1"

finn_api = { path = "./api", version = "4.4.0" }
finn_config = { path = "./config", version = "4.4.0" }
finn_chain = { path = "./chain", version = "4.4.0" }
finn_core = { path = "./core", version = "4.4.0" }
finn_keychain = { path = "./keychain", version = "4.4.0" }
finn_p2p = { path = "./p2p", version = "4.4.0" }
finn_servers = { path = "./servers", version = "4.4.0" }
finn_util = { path = "./util", version = "4.4.0" }

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["pancurses-backend"]

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
finn_chain = { path = "./chain", version = "4.4.0" }
finn_store = { path = "./store", version = "4.4.0" }
