[package]
name = "finn_api"
version = "4.4.0"
authors = ["Finn Developers <mimblewimble@lists.launchpad.net>"]
description = "APIs for Finn, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/samisbakedham/Finn"
keywords = [ "crypto", "Finn", "mimblewimble" ]
workspace = ".."
edition = "2022"

[dependencies]
easy-jsonrpc-mw = "0.5.4"
failure = "0.1.1"
failure_derive = "0.1.1"
hyper = "0.13"
lazy_static = "1"
regex = "1"
ring = "0.16"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "0.13"
http = "0.2"
hyper-timeout = "0.3"
futures = "0.3"
rustls = "0.17"
url = "2.1"
bytes = "0.5"
chrono = { version = "0.4.11", features = ["serde"] }

Finn_core = { path = "../core", version = "4.4.0" }
Finn_chain = { path = "../chain", version = "4.4.0" }
Finn_p2p = { path = "../p2p", version = "4.4.0" }
Finn_pool = { path = "../pool", version = "4.4.0" }
Finn_store = { path = "../store", version = "4.4.0" }
Finn_util = { path = "../util", version = "4.4.0" }

# NOTE. We can't have hyper-rustls the same version for Android and non android. because if how rust builds dependency.
# Android must have v0.20+
[target.'cfg(not(target_os = "android"))'.dependencies]
hyper-rustls = "0.20"

[target.'cfg(target_os = "android")'.dependencies]
hyper-rustls = { version = "0.21", default-features = false, features = ["webpki-tokio"] }
