[package]
name = "finn_core"
version = "4.4.0"
authors = ["finn Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for finn, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/finn"
keywords = [ "crypto", "finn", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
blake2 = { package = "blake2-rfc", version = "0.2"}
byteorder = "1"
croaring = { version = "0.4.5", package = "croaring-mw", features = ["compat"] }
enum_primitive = "0.1"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1"
lru-cache = "0.1"
num = "0.2"
num-bigint = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
siphasher = "0.3"
log = "0.4"
chrono = { version = "0.4.11", features = ["serde"] }
zeroize = { version = "1.1", features =["zeroize_derive"] }

keychain = { package = "finn_keychain", path = "../keychain", version = "4.4.0" }
util = { package = "finn_util", path = "../util", version = "4.4.0" }

[dev-dependencies]
serde_json = "1"
