[package]
name = "finn_p2p"
version = "4.4.0"
authors = ["finn Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for finn, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/finn"
keywords = [ "crypto", "finn", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
enum_primitive = "0.1"
lru-cache = "0.1"
tor-stream = "0.2"
net2 = "0.2"
socks = "0.3.2"
failure = "0.1"
failure_derive = "0.1"
num = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
tempfile = "3.1"
log = "0.4"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3"
#libp2p-tokio-socks5 = { path = "../../rust-libp2p-tokio-socks5" }
#libp2p = { path = "../../rust-libp2p", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
libp2p-tokio-socks5 = { git = "https://github.com/mwcproject/rust-libp2p-tokio-socks5", branch = "master" }
libp2p = { git = "https://github.com/mwcproject/rust-libp2p", branch = "master", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
lazy_static = "1"
async-std = "1.9"
tokio = {version = "0.2", features = ["full"] }
ed25519-dalek = "1"
serde_json = "1"

finn_core = { path = "../core", version = "4.4.0" }
finn_store = { path = "../store", version = "4.4.0" }
finn_util = { path = "../util", version = "4.4.0" }
finn_chain = { path = "../chain", version = "4.4.0" }

[dev-dependencies]
finn_pool = { path = "../pool", version = "4.4.0" }
