[package]
name = "finn_pool"
version = "4.4.0"
authors = ["finn Developers <mimblewimble@lists.launchpad.net>"]
description = "Chain implementation for finn, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/finn"
keywords = [ "crypto", "finn", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
lru-cache = "0.1"
log = "0.4"
chrono = "0.4.11"
failure = "0.1"
failure_derive = "0.1"

finn_core = { path = "../core", version = "4.4.0" }
finn_keychain = { path = "../keychain", version = "4.4.0" }
finn_util = { path = "../util", version = "4.4.0" }

[dev-dependencies]
finn_chain = { path = "../chain", version = "4.4.0" }
