[package]
name = "finn_servers"
version = "4.4.0"
authors = ["finn Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/finn"
keywords = [ "crypto", "finn", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.13"
fs2 = "0.4"
futures = "0.3"
http = "0.2"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.11"
tokio = {version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
walkdir = "2.3.1"
failure = "0.1"
failure_derive = "0.1"
ed25519-dalek = "1"
regex = "1.3"
sysinfo = "0.9"
dirs = "1.0.3"
timer = "0.2"

finn_api = { path = "../api", version = "4.4.0" }
finn_chain = { path = "../chain", version = "4.4.0" }
finn_core = { path = "../core", version = "4.4.0" }
finn_keychain = { path = "../keychain", version = "4.4.0" }
finn_p2p = { path = "../p2p", version = "4.4.0" }
finn_pool = { path = "../pool", version = "4.4.0" }
finn_store = { path = "../store", version = "4.4.0" }
finn_util = { path = "../util", version = "4.4.0" }

# NOTE. We can't have hyper-rustls the same version for Android and non android. because if how rust builds dependency.
# Android must have v0.20+
[target.'cfg(not(target_os = "android"))'.dependencies]
hyper-rustls = "0.20"

[target.'cfg(target_os = "android")'.dependencies]
hyper-rustls = { version = "0.21", default-features = false, features = ["webpki-tokio"] }