[package]
name = "finn_store"
version = "4.4.0"
authors = ["finn Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/finn"
keywords = [ "crypto", "finn", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
byteorder = "1"
croaring = { version = "0.4.5", package = "croaring-mw", features = ["compat"] }
libc = "0.2"
failure = "0.1"
failure_derive = "0.1"
lmdb-zero = "0.4.4"
memmap = "0.7"
tempfile = "3.1"
serde = "1"
serde_derive = "1"
log = "0.4"

finn_core = { path = "../core", version = "4.4.0" }
finn_util = { path = "../util", version = "4.4.0" }

[dev-dependencies]
chrono = "0.4.11"
rand = "0.6"
filetime = "0.2"
env_logger = "0.7"
